# tv-side-keyboard-SparrowTV

./: .gitmodules  README.md
firmware-ch32v003/: stickpointv.c
firmware-ch32v003/ch32v003fun/: ch32v003_GPIO_branchless.h
firmware-circuitpython/: .gitignore  action_codes.py  adafruit_hid  adafruit_httpserver  adafruit_irremote.py  adafruit_logging.py  application.py  boot.py  ch9329  color.py  invoke.yaml.sample  ir.py  led_color.py  main.py  master.py  matrix_buttons.py  matrix_leds.py  model.py  pc_usb.py  pointer.py  pyproject.toml  settings.py  settings.sample.toml  uart_logging_handler.py  ui.py
firmware-circuitpython/config/: config.py  ir_pulse.py
firmware-circuitpython/lib/: README.md
firmware-circuitpython/lib/ch9329/: __init__.py  ch9329.py
firmware-circuitpython/tasks/: __init__.py
pcb/: tv-side-keyboard.kicad_pcb  tv-side-keyboard.kicad_pro  tv-side-keyboard.kicad_sch
pcb-kicad/: tv-side-keyboard.csv  tv-side-keyboard.kicad_pcb  tv-side-keyboard.kicad_pro  tv-side-keyboard.kicad_sch
