[tool.poetry]
name = "firmware-circuitpython"
version = "0.1.0"
description = ""
authors = ["Atsushi Morimoto (74th) <74th.tech@gmail.com>"]
readme = "README.md"
packages = [{include = "firmware_circuitpython"}]

[tool.poetry.dependencies]
python = "^3.10"
adafruit-circuitpython-typing = "^1.9.4"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
